WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137192
Fix some minor typos: psuedo -> pseudo
https://bugs.webkit.org/show_bug.cgi?id=137192
Summary
Fix some minor typos: psuedo -> pseudo
Sungmann Cho
Reported
2014-09-28 04:24:37 PDT
Fix some minor typos: psuedo -> pseudo
Attachments
Patch
(16.38 KB, patch)
2014-09-28 04:28 PDT
,
Sungmann Cho
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sungmann Cho
Comment 1
2014-09-28 04:28:25 PDT
Created
attachment 238811
[details]
Patch
WebKit Commit Bot
Comment 2
2014-09-28 16:18:30 PDT
Comment on
attachment 238811
[details]
Patch Clearing flags on attachment: 238811 Committed
r174046
: <
http://trac.webkit.org/changeset/174046
>
WebKit Commit Bot
Comment 3
2014-09-28 16:18:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug