Fix some minor typos: psuedo -> pseudo https://bugs.webkit.org/show_bug.cgi?id=137192

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2014-09-28
Reviewed by Alexey Proskuryakov.

PerformanceTests:

* Speedometer/resources/todomvc/architecture-examples/emberjs/bower_components/handlebars/handlebars.js:

Source/WebCore:

No new tests, no behavior change.

* css/CSSSelector.cpp:
(WebCore::CSSSelector::specificityForOneSelector):

LayoutTests:

* fast/dom/Window/getMatchedCSSRules-with-invalid-pseudo-elements-expected.txt:
* fast/dom/Window/getMatchedCSSRules-with-invalid-pseudo-elements.html:
* fast/dom/Window/getMatchedCSSRules-with-pseudo-elements-expected.txt:
* fast/dom/Window/getMatchedCSSRules-with-pseudo-elements.html:
* fast/selectors/159.html:
* fast/selectors/160.html:
* fast/selectors/166.html:
* platform/efl/fast/selectors/166-expected.txt:
* platform/gtk/fast/selectors/166-expected.txt:
* platform/ios-sim/fast/selectors/166-expected.txt:
* platform/mac/fast/selectors/166-expected.txt:

Canonical link: https://commits.webkit.org/154993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174046 268f45cc-cd09-0410-ab3c-d52691b4dbfc